<?xml version="1.0" encoding="utf-8"?>
<android.support.design.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardViewPhoto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="8dp"
    android:clickable="true"
    android:focusable="true"
    card_view:cardBackgroundColor="@color/colorBluePrimary"
    card_view:cardCornerRadius="4dp"
    card_view:cardElevation="8dp"
    card_view:layout_constraintStart_toStartOf="parent"
    card_view:layout_constraintTop_toTopOf="parent"
    card_view:strokeColor="@color/colorBluePrimaryDark"
    card_view:strokeWidth="1dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:paddingStart="8dp"
            android:paddingTop="2dp"
            android:paddingEnd="8dp"
            android:text="@string/share_star" />

        <ImageView
            android:id="@+id/content_photo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title"
            android:contentDescription="@string/gallery"
            android:paddingBottom="24dp"
            android:textAppearance="?attr/textAppearanceListItem" />

        <android.support.design.chip.Chip
            android:id="@+id/chip_star"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:button="@drawable/ic_star_border_black_24dp"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            card_view:chipBackgroundColor="@color/colorBluePrimary"
            card_view:chipCornerRadius="4dp"
            card_view:chipStrokeColor="@color/colorBluePrimaryDark" />

        <android.support.design.chip.Chip
            android:id="@+id/chip_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_margin="4dp"
            android:button="@drawable/ic_favorite_border_black_24dp"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            card_view:chipBackgroundColor="@color/colorBluePrimary"
            card_view:chipCornerRadius="4dp"
            card_view:chipStrokeColor="@color/colorBluePrimaryDark" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:contentDescription="@string/favorite"
            android:src="@drawable/ic_favorite_black_24dp"
            android:visibility="gone" />
    </RelativeLayout>

</android.support.design.card.MaterialCardView>